--- a/sw_mini_project_last/public/styles.css
+++ b/sw_mini_project_last/public/styles.css
@@ -19,15 +19,6 @@ h1 {
     margin: 20px 0;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 li {
     background-color: #fff;
     border-radius: 10px;
@@ -37,6 +28,32 @@ li {
     width: 200px;
     text-align: center;
     transition: transform 0.3s;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#review-list {
+    list-style-type: none; /* 기본 목록 스타일 제거 */
+    padding: 0; /* 패딩 제거 */
+    margin: 0; /* 마진 제거 */
+}
+
+#review-list li {
+    background-color: #fff; /* 배경색 */
+    border-radius: 10px; /* 둥근 테두리 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+    margin: 20px 0; /* 위아래 마진으로 수직 간격 추가 */
+    padding: 20px; /* 내부 패딩 */
+    width: 100%; /* 전체 너비 사용 */
+    text-align: center; /* 텍스트 가운데 정렬 */
+    transition: transform 0.3s; /* 변환 효과 */
 }
 
 li:hover {
